--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "nusje2000/dependency-graph": "^2.3",
         "symfony/console": "^4.4|^5.0|^6.0",
         "composer/semver": "^1.5|^2.0|^3.0",
-        "monolog/monolog": "^1.0|^2.0",
-        "psr/log": "^1.0"
+        "monolog/monolog": "^1.0|^2.0|^3.0",
+        "psr/log": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.7",
